--- a/Pages to develop/css/register_portrait.css
+++ b/Pages to develop/css/register_portrait.css
@@ -96,6 +96,6 @@ li a:hover {
 }
 
 html {
-  background: url(image/background.jpg) no-repeat center center fixed;
+  background: url(../image/background.jpg) no-repeat center center fixed;
   background-size: cover;
 }
