--- a/Pages to develop/css/details_desktop.css
+++ b/Pages to develop/css/details_desktop.css
@@ -32,12 +32,12 @@ li a:hover {
   /* z-index: 1; */
   /* display: block; */
   height:50%;
-  width: 25%;
+  width: 30%;
 
   /* margin-left: 1600px;
   margin-top: 200px; */
 
-  top: 30%;
+  top: 12%;
   right: 5%;
   /* margin-right: -50%; */
   /* transform: translate(-50%, -50%) */
@@ -47,9 +47,34 @@ li a:hover {
 }
 
 
+
+.textbox {
+  font-size: 22px;
+  width: 80%;
+  height: auto%;
+  /* margin-bottom: 20px; */
+  position: relative;
+  left: 30px;
+  padding-left: 15px;
+
+}
+
+.btnSubmit {
+  font-size: 20px;
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 10px ;
+
+  /* display: inline-block; */
+  cursor: pointer;
+}
+
 /* Add padding to container elements */
 .container {
-    padding: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
+
 }
 
 .checkbox {
@@ -67,30 +92,44 @@ li a:hover {
 
 /* The Modal (background) */
 .modal {
-    /* z-index: 1; /* Sit on top */ */
+    /* z-index: 1; /* Sit on top */
     position: fixed; /* Stay in place */
-    left: 0;
-    top: 0;
+    left: 0px;
+    /* top: 0; */
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    padding-top: 50px;
+    /* padding-top: 60px; */
 }
 
 /* Modal Content/Box */
 .modal-content {
+    align-content:flex-start;
     right:0;
     background-color: #cccccc;
     margin: auto ; /* 5% from the top, 15% from the bottom and centered */
     border: 1px solid #888;
-    width: 50%; /* Could be more or less, depending on screen size */
+    width: 80%; /* Could be more or less, depending on screen size */
     transition:  0.5s;
     right:0;
+}
+
+.table_row2 {
+  padding-left: 1em;
+
 }
 
 tr.table_row > td{
   padding-bottom: 1em;
 }
+
+.th2, .td2 {
+    border: 2px solid black;
+
+}
+
+
+
 
 .para1 {
   margin-left: 30px;
@@ -130,10 +169,22 @@ tr.table_row > td{
 
 }
 
+.rating_dropdown {
+  margin-left: 15%;
+
+}
+
+.post_rating {
+  margin-left: 15%;
+
+}
+
 
 html {
-    background: linear-gradient(to top, #333333 0%, #26b9d0 96%);
-    /* background-size: cover; */
-    background-repeat: no-repeat;
     height: 100%;
+    background: linear-gradient(to top, #333333 0%, #26b9d0 100%);
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
+    /* background-attachment: fixed; */
+
 }
