--- a/Pages to develop/css/register_desktop.css
+++ b/Pages to develop/css/register_desktop.css
@@ -121,6 +121,6 @@ li a:hover {
 }
 
 html {
-  background: url(image/background.jpg) no-repeat center center fixed;
+  background: url(../image/background.jpg) no-repeat center center fixed;
   background-size: cover;
 }
