--- a/Pages to develop/css/results_desktop.css
+++ b/Pages to develop/css/results_desktop.css
@@ -23,13 +23,16 @@ li a:hover {
     background-color: #26b9d0;
 }
 
+
+
+
 .card {
 
-    margin: auto;
+    margin-left:100px;
     /* border: 2px solid; */
     /* border-color: #d7e9f8; */
     transition: 0.03s;
-    width: 90%;
+    width: 30%;
     /* margin-bottom: 2px; */
 
     /* background-color: #d7e9f8; */
@@ -52,7 +55,6 @@ li a:hover {
     padding: 2px 10px;
 }
 
-
 .map_frame {
 
   /* align:"center"; */
@@ -72,15 +74,20 @@ li a:hover {
 
 
 }
+/*
 
+.map_frame-container {
 
+  width: 100%;
+  height: 100%;
+
+} */
 .card_images {
     display: inline-block;
-    width: 240px;
-    height: 240px;
-    margin-left:  5%;
-    margin-top: 5%;
-    /* margin-left: 10px; */
+    width: 120px;
+    height: 120px;
+    margin: 4px;
+    margin-left: 10px;
 
 }
 
@@ -92,7 +99,7 @@ li a:hover {
 }
 
 .vertical_line {
-  display: none;
+  display: inline-block;
   border-left: 2px solid #999;
   height: 120px;
   align: center;
@@ -102,13 +109,16 @@ li a:hover {
 }
 .textbox {
     font-size: 22px;
-    width: 90%;
+    width: 60%;
     height:   35px;
     margin-bottom: 20px;
     /* position: relative; */
     left: 30px;
     padding-left: 15px;
   }
+
+  /* #mapid { height: 180px; } */
+
 
 .para1 {
   margin-left: 30px;
@@ -181,7 +191,8 @@ li a:hover {
 }
 
 
+
 html {
-  background: url(image/background.jpg) no-repeat center center fixed;
+  background: url(../image/background.jpg) no-repeat center center fixed;
   background-size: cover;
 }
