--- a/Pages to develop/css/results_portrait.css
+++ b/Pages to develop/css/results_portrait.css
@@ -23,16 +23,13 @@ li a:hover {
     background-color: #26b9d0;
 }
 
-
-
-
 .card {
 
-    margin-left:100px;
+    margin: auto;
     /* border: 2px solid; */
     /* border-color: #d7e9f8; */
     transition: 0.03s;
-    width: 30%;
+    width: 90%;
     /* margin-bottom: 2px; */
 
     /* background-color: #d7e9f8; */
@@ -55,6 +52,7 @@ li a:hover {
     padding: 2px 10px;
 }
 
+
 .map_frame {
 
   /* align:"center"; */
@@ -74,20 +72,15 @@ li a:hover {
 
 
 }
-/*
 
-.map_frame-container {
 
-  width: 100%;
-  height: 100%;
-
-} */
 .card_images {
     display: inline-block;
-    width: 120px;
-    height: 120px;
-    margin: 4px;
-    margin-left: 10px;
+    width: 240px;
+    height: 240px;
+    margin-left:  5%;
+    margin-top: 5%;
+    /* margin-left: 10px; */
 
 }
 
@@ -99,7 +92,7 @@ li a:hover {
 }
 
 .vertical_line {
-  display: inline-block;
+  display: none;
   border-left: 2px solid #999;
   height: 120px;
   align: center;
@@ -109,16 +102,13 @@ li a:hover {
 }
 .textbox {
     font-size: 22px;
-    width: 60%;
+    width: 90%;
     height:   35px;
     margin-bottom: 20px;
     /* position: relative; */
     left: 30px;
     padding-left: 15px;
   }
-
-  /* #mapid { height: 180px; } */
-
 
 .para1 {
   margin-left: 30px;
@@ -155,7 +145,8 @@ li a:hover {
 
 .btnSubmit {
   font-size: 20px;
-  background-color: black;
+  background-color: Hi, this is a registration page.
+black;
   color: white;
   border: none;
   padding: 10px 32px;
@@ -191,8 +182,7 @@ li a:hover {
 }
 
 
-
 html {
-  background: url(image/background.jpg) no-repeat center center fixed;
+  background: url(../image/background.jpg) no-repeat center center fixed;
   background-size: cover;
 }
